# mmath

./: .gitignore  Cargo.toml  README.md  build.rs
scripts/: fetch-voice-assets.sh
src/: fracpct.rs  game.rs  main.rs  model.rs  numfmt.rs  optiver.rs  results.rs  sequences.rs  setup.rs  voice.rs
